Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6763

redefinition of sk_sleep when using external OFED and CentOS 6.5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.8.0
    • Lustre master on CentOS 6.5 with 2.6.32-431.el6 kernel and OFED 3.12-1
    • 3
    • 9223372036854775807

      While building Lustre master on CentOS 6.5 with 2.6.32-431.el6 kernel and OFED 3.12-1 we get a build error:

      [ 212s] In file included from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.h:82,
      [ 212s] from /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/klnds/o2iblnd/o2iblnd.c:42:
      [ 212s] /home/abuild/rpmbuild/BUILD/cray-lustre/lnet/include/lnet/lib-lnet.h:708: error: redefinition of 'sk_sleep'
      [ 212s] /usr/src/kernel-modules-ofed/x86_64/cray_ari_s_cos/include/linux/compat-2.6.35.h:41: note: previous definition of 'sk_sleep' was here

      The kernel is not providing sk_sleep:
      [ 146s] checking if Linux kernel has 'sk_sleep'... no

      So it appears that the compat header from OFED defines sk_sleep, then later lnet/include/lnet/lib-lnet.h checks if the kernel provides sk_sleep and defines sk_sleep again if the kernel doesn't.

            ashehata Amir Shehata (Inactive)
            jmiller Justin Miller (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: