lnet/lnet/lib-socket.c
@@ -42,6 +42,9 @@
 #include <linux/pagemap.h>
 /* For sys_open & sys_close */
 #include <linux/syscalls.h>
+#ifdef HAVE_COMPAT_RDMA
+#include <linux/compat-2.6.h>
+#endif
 #include <net/sock.h>
 
 #include <libcfs/libcfs.h>
